# index2repo

./: .gitignore  .hgignore  setup.cfg
index2repo/: __init__.py  cli.py  egginfo2distinfo.py  indirection.py  job.py
index2repo/_compat/packaging/pypi/: __init__.py  base.py  dist.py  errors.py  mirrors.py  simple.py  wrapper.py  xmlrpc.py
index2repo/tests/: test_egginfo2distinfo.py
index2repo/tests/test_info/mock-0.7.2.dist-info/: METADATA
index2repo/tests/test_info/wsgioauth-0.3.dist-info/: INSTALLER  RECORD  entry_points.txt  namespace_packages.txt  requires.txt
index2repo/tests/test_info/wsgioauth-0.3.egg-info/: PKG-INFO  top_level.txt
