[metadata]
name = index2repo
version = 1.0a1
author = Michael Mulich
author_email = michael.mulich@gmail.com
summary = Python package index (PyPI) to package metadata repository 
home_page = https://bitbucket.org/pumazi/index2repo/
license = BSD

classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License

# requires = pkgmeta

[files]
package = index2repo
